# autonomous-boat

./: LICENSE  README.md
RaspberryPI5/config/: params..yaml
RaspberryPI5/include/sailbot/actuators/: rudder_servo.hpp  winch_servo.hpp
RaspberryPI5/launch/: sailbot.launch.py
RaspberryPI5/src/actuators/: pca9685.cpp  rudder_servo.cpp  winch_servo.cpp
RaspberryPI5/src/estimation/: nav_state_estimator.cpp
RaspberryPI5/src/guidence/: tack_planner.cpp
RaspberryPI5/src/sensors/: wind_sensor.cpp
datasheets/: dt_vic3d.txt  pca9685.txt  servo.txt
sailbot/: CMakeLists.txt
sailbot/config/: params.yaml
sailbot/include/sailbot/actuators/: pca9685.hpp
sailbot/src/actuators/: pca9685.cpp
sailbot/src/control/: rudder_controller.cpp  sheet_controller.cpp
sailbot/src/guidence/: waypoint_nav.cpp  wind_model.cpp
sailbot/src/mission/: fsm.cpp
sailbot/src/sensors/: gnss.cpp
sailbot_ws/src/sailbot/: CMakeLists.txt  package.xml
sailbot_ws/src/sailbot/config/: waypoints.yaml
sailbot_ws/src/sailbot/include/sailbot/control/: rudder_controller.hpp  sheet_controller.hpp
sailbot_ws/src/sailbot/include/sailbot/estimation/: nav_state_estimator.hpp  true_wind_estimator.hpp  velocity_filter.hpp
sailbot_ws/src/sailbot/include/sailbot/guidance/: waypoint_nav.hpp  wind_model.hpp
sailbot_ws/src/sailbot/include/sailbot/guidence/: tack_planner.hpp
sailbot_ws/src/sailbot/include/sailbot/mission/: fsm.hpp
sailbot_ws/src/sailbot/include/sailbot/sensors/: bno055_i2c.hpp  gnss_sensor.hpp  imu_sensor.hpp  wind_sensor.hpp
sailbot_ws/src/sailbot/launch/: sailbot_launch.py
sailbot_ws/src/sailbot/msg/: GuidanceDebug.msg  MissionState.msg  NavState.msg
sailbot_ws/src/sailbot/scripts/: data_logger.py
sailbot_ws/src/sailbot/src/: actuators_node.cpp  bno055_i2c_node.cpp  control_node.cpp  guidance_node.cpp  mission_node.cpp  nav_state_estimator_node.cpp  sailbot_main.cpp  wind_sensor_node.cpp
sailbot_ws/src/sailbot/src/actuators/: pca9685.cpp  winch_servo.cpp
sailbot_ws/src/sailbot/src/control/: rudder_controller.cpp  sheet_controller.cpp
sailbot_ws/src/sailbot/src/estimation/: nav_state_estimator.cpp  nav_state_estimator_node.cpp  true_wind_estimator.cpp  velocity_filter.cpp
sailbot_ws/src/sailbot/src/gnss/: teseo_serial_node.cpp
sailbot_ws/src/sailbot/src/guidance/: tack_planner.cpp  waypoint_nav.cpp  wind_model.cpp
sailbot_ws/src/sailbot/src/mission/: fsm.cpp  mission_node.cpp
sailbot_ws/src/sailbot/src/sensors/: bno055_i2c.cpp  bno055_i2c.cpp.cpp  gnss_sensor.cpp  imu_sensor.cpp  wind_sensor.cpp
src/: sail_pseudocode.c
